Fri Jul 26 13:00:24 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (convert_mb_to_wchar): use bare pointer instead of
	  VALUE, and remove useless argument.

Fri Jul 26 11:42:07 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* rational.c (f_round_common): Rational is expected to be returned by
	  Rational#*, but mathn.rb breaks that assumption.  [ruby-core:56177]
	  [Bug #8687]

Fri Jul 26 01:37:45 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/ruby.h: check defined(USE_RGENGC_LOGGING_WB_UNPROTECT)

Fri Jul 26 01:21:41 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (rb_file_expand_path_internal): fix r42160; skip '~'.

Thu Jul 25 17:53:18 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP#connect): disable Nagle's algorithm on
	  HTTP connection. [ruby-core:56158] [Feature #8681]

Thu Jul 25 17:49:42 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_to_s): convert closing parenthes to the target encoding
	  if it is ASCII incompatible encoding. [ruby-core:56063] [Bug #8650]

Thu Jul 25 17:21:21 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (is_obj_encoding): new macro to check if obj is an
	  Encoding.  obj can be any type while is_data_encoding expects T_DATA
	  only.

Thu Jul 25 17:17:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_expand_path_internal): should clear coderange after
	  copying user name as binary data.

Thu Jul 25 16:17:55 2013  Koichi Sasada  <ko1@atdot.net>

	* encoding.c (check_encoding): Check T_DATA or not.
	  is_data_encoding(obj) assumes that `obj' is T_DATA.

Thu Jul 25 13:06:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_s_home): use rb_home_dir_of and rb_default_home_dir.

	* file.c (rb_home_dir_of): split from rb_home_dir() for the home
	  directry of the given user, and the user name is a VALUE, not a bare
	  pointer.  should raise if the user does not exist.
